market-data-system-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marketguard-ui
  namespace: marketguard
spec:
  selector:
    app: marketguard-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
