market-data-system-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketguard-ui
  namespace: marketguard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: marketguard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketguard-ui
                port:
                  number: 80
